# Daniel_Guillen_Practica3

./: README.md
rosbag2_2025_05_16-19_36_37/: metadata.yaml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/config/: rover_controllers.yaml
src/rover_description/launch/: robot_check.launch.py  robot_controllers.launch.py  robot_gazebo.launch.py
src/rover_description/meshes/dae/: Cylinder.001.dae  Cylinder.002.dae  Cylinder.003.dae  Cylinder.004.dae  Cylinder.006.dae  Cylinder.009.dae  Cylinder.011.dae  Cylinder.013.dae  Cylinder.014.dae  Cylinder.036.dae  Cylinder.037.dae  Cylinder.038.dae  Cylinder.039.dae  Cylinder.040.dae  Cylinder.041.dae  Cylinder.044.dae  Cylinder.045.dae  Cylinder.046.dae  Cylinder.048.dae  Cylinder.049.dae  Cylinder.052.dae  Cylinder.053.dae  Cylinder.055.dae  Cylinder.056.dae  Cylinder.058.dae  Cylinder.059.dae  Cylinder.061.dae  Cylinder.062.dae  Cylinder.063.dae  Cylinder.064.dae  Cylinder.065.dae  Cylinder.066.dae  Cylinder.067.dae  Cylinder.072.dae  Cylinder.074.dae  Cylinder.075.dae  Cylinder.076.dae  Cylinder.077.dae  Cylinder.078.dae  Cylinder.081.dae
src/rover_description/robots/: robot.urdf.xacro
src/rover_description/urdf/: ros2_control.urdf.xacro
src/rover_description/urdf/arm/: gripper.urdf.xacro  scara.urdf.xacro
src/rover_description/urdf/base/: robot_base.urdf.xacro
src/rover_description/urdf/sensors/: camera.urdf.xacro  imu_sensor.urdf.xacro
src/rover_description/urdf/utils/: utils.urdf.xacro
src/rover_description/urdf/wheels/: rover_wheel.urdf.xacro
src/rover_moveit_config/: .setup_assistant  package.xml
src/rover_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  rover.ros2_control.xacro  rover.srdf  rover.urdf.xacro
